<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <!--RANDOM TEXT-->
    <string name="app_name">SHIPPER_OWNER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="LOCAL_ROOT_PATH">http://192.168.0.102/loader_mobile/</string>
    <string name="SERVER_ROOT_PATH">www.theshipper.co.in/</string>
    <string name="ACTION_PATH">action/</string>
    <string name="INCLUDE_PATH">includes/</string>
    <string name="main_activity_otp_text">TheShipper will send an SMS to verify you mobile number.Enter your 10 digit mobile number:</string>

    <!--Messaqges-->
    <string name="GPSAlertDialogTitle">GPS LOCATION SETTING</string>
    <string name="GPSAlertDialogMessage">Your GPS location is not enabled</string>
    <string name="NetworkAlertDialogTitle">NETWORK SETTING</string>
    <string name="NetworkAlertDialogMessage">Your Internet is not enabled</string>
    <string name="LogoutAlertDialogTitle">LOGOUT</string>
    <string name="LogoutAlertDialogMessage">Do you want to logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Ok">Ok</string>

    <!--Edit text Placeholder hint-->
    <string name="hint_mobile_no">10 Digit Mobile No</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_email">Your Email</string>
    <string name="hint_postal_address">Your Address</string>
    <string name="hint_otp">6 Digit OTP</string>
    <string name="search_location">Search location</string>
    <string name="hint_pickup_point">Enter Pickup Point</string>
    <string name="hint_dropoff_point">Enter Dropoff Point</string>

    <!--Button Text-->
    <string name="button_text_registration">REGISTER</string>
    <string name="button_text_OtpVerification">VERIFY OTP</string>
    <string name="button_text_update">UPDATE</string>
    <string name="button_text_book_now">BOOK NOW</string>
    <string name="button_text_book_later">BOOK LATER</string>

    <string name="button_text_cancel">CANCEL</string>
    <string name="button_text_ok">OK</string>
    <string name="button_text_confirm_booking">CONFIRM BOOKING</string>
    <string name="button_text_get_quote">GET QUOTE</string>

    <!--VEHICLE NAMES-->
    <string name="vehicle_ace">Ace</string>
    <string name="vehicle_zip">Ace</string>
    <string name="vehicle_pickup">Pickup</string>
    <string name="vehicle_407">407</string>

    <!--Google Services-->
    <string name="gcm_senderID">290729759682</string>
    <string name="google_app_id">290729759682</string>
    <string name="app_APIkey">AIzaSyD9NxvrznPn9WyeWJ1zVEZTfwkz-PYSokg</string>
    <string name="server_APIkey1">AIzaSyCF9AFjZ4WcXAH6Qgpxm3VjgjoeuyGAADE</string>

    <!--NAVIGATION DRAWER-->
    <string-array name="nav_menu">
        <item>My Trucks</item>
        <item>Booking Status</item>
        <item>Drivers</item>
        <item>Rate Card</item>
        <item>Edit Your Profile</item>
        <item>Emergency Contact</item>
        <item>Support</item>
        <item>T&amp;C</item>
        <item>Logout</item>
    </string-array>
    <!--NAVIGATION DRAWER-->
    <string-array name="title_menu">
        <item>My Trucks</item>
        <item>Booking Status</item>
        <item>Drivers</item>
        <item>Rate Card</item>
        <item>Edit Your Profile</item>
        <item>Emergency Contact</item>
        <item>Support</item>
        <item>T&amp;C</item>
        <item>Booking Detail</item>
        <item>Finished Booking Detail</item>
    </string-array>
    <!--NAVIGATION DRAWER-->
    <string-array name="weight_list">
        <item>.5 Tonne</item>
        <item>1 Tonne</item>
        <item>1.5 Tonne</item>
        <item>2 Tonne</item>
        <item>2.5 Tonne</item>
        <item>3 Tonne</item>
        <item>3.5 Tonne</item>
        <item>4 Tonne</item>
        <item>5 Tonne</item>
        <item>5.5 Tonne</item>
        <item>6 Tonne</item>
        <item>6.5 Tonne</item>
        <item>7 Tonne</item>
        <item>7.5 Tonne</item>
        <item>8 Tonne</item>
        <item>8.5 Tonne</item>
        <item>9 Tonne</item>
        <item>9.5 Tonne</item>
        <item>10 Tonne</item>
        <item>10.5 Tonne</item>
        <item>11 Tonne</item>
        <item>11.5 Tonne</item>
        <item>12 Tonne</item>
        <item>12.5 Tonne</item>
    </string-array>
    <string-array name="zip_weight_list">
        <item>.5 Tonne</item>
        <item>&lt;1 Tonne</item>
    </string-array>
    <string-array name="ace_weight_list">
        <item>.5 Tonne</item>
        <item>1 Tonne</item>
        <item>&lt;1.5 Tonne</item>
    </string-array>
    <string-array name="pickup_weight_list">
        <item>.5 Tonne</item>
        <item>1 Tonne</item>
        <item>1.5 Tonne</item>
        <item>2 Tonne</item>
        <item>&lt;2.5 Tonne</item>
    </string-array>
    <string-array name="tata_weight_list">
        <item>.5 Tonne</item>
        <item>1 Tonne</item>
        <item>1.5 Tonne</item>
        <item>2 Tonne</item>
        <item>2.5 Tonne</item>
        <item>3 Tonne</item>
        <item>3.5 Tonne</item>
        <item>&lt;4 Tonne</item>
    </string-array>
    <!--SLIDE TAB MENU-->
    <string-array name="slide_tab_manu">
        <item>Current Booking</item>
        <item>Future Boooking</item>
        <item>Finished Booking</item>
    </string-array>

    <!--VEHICLE LIST-->
    <string-array name="vehicle_list">
        <item>ACE</item>
        <item>ZIP</item>
        <item>407</item>
        <item>14ft</item>
        <item>17ft</item>
    </string-array>

    <!--TITLE OF ACTIVITIES-->
    <string name="title_activity_otp_verification">OTP Verification</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_current_location">Map</string>
    <string name="title_activity_gps_tracking">GpsTracking</string>
    <string name="title_activity_sqllite_start">SQLliteStart</string>
    <string name="title_activity_otp__verification__done">OTP VERIFICATION DONE</string>
    <string name="title_registration_page">REGISTRATION</string>
    <string name="title_activity_book_now">Book Now</string>
    <string name="title_activity_full">My Trucks</string>
    <string name="drawer_open">Open Nav Drawer</string>
    <string name="drawer_close">Close Nav Drawer</string>
    <string name="title_activity_get_direction">Map</string>
    <string name="title_activity_maps">Map</string>

    <!--TITLE OF FRAGMENT-->
    <string name="title_my_trucks_fragment">My Trucks</string>
    <string name="title_book_fragment">Book A Truck</string>
    <string name="title_drivers_fragment">Drivers</string>
    <string name="title_driver_details_fragment">Driver Details</string>
    <string name="title_book_now_fragment">Book Now</string>
    <string name="title_book_later_fragment">Book Later</string>
    <string name="title_confirm_booking_fragment">Confirm Booking</string>
    <string name="title_emergency_contact_fragment">Emergency Contact</string>

    <string name="title_booking_status_fragment">Booking Status</string>
    <string name="title_rate_card_fragment">Rate Card</string>
    <string name="title_about_fragment">T&amp;C</string>

    <string name="title_current_booking_fragment">Current Booking</string>
    <string name="title_current_booking_detail_fragment">Current Booking Detail</string>
    <string name="title_future_booking_fragment">Future Booking</string>
    <string name="title_future_booking_detail_fragment">Future Booking Detail</string>
    <string name="title_finished_booking_fragment">Finished Bookings</string>
    <string name="title_finished_booking_detail_fragment">Finished Bookings Detail</string>

    <!--MENU VALUES-->
    <string name="delete">DELETE</string>

    <!--SYMBOLS-->
    <string name="semi_colon">: </string>
</resources>
