<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.co.theshipper.www.shipper_owner.MainActivity"
    style="@style/outer_layout"
    >
    <LinearLayout
        style="@style/vertical_LL">
        <LinearLayout
            style="@style/horizontal_LL.sm.1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/main_activity_otp_text"/>
        </LinearLayout>
        <LinearLayout
            style="@style/horizontal_LL.sm.1">
            <LinearLayout
                style="@style/vertical_LL">
                <LinearLayout
                    style="@style/horizontal_LL.sm.1"
                    android:gravity="center">
                    <EditText
                        style="@style/edit_text.phone"
                        android:hint="@string/hint_mobile_no"
                        android:id="@+id/editText" />
                 </LinearLayout>
                <LinearLayout
                    style="@style/horizontal_LL.sm.1"
                    android:gravity="center">
                    <Button
                        style="@style/normal_button"
                        android:text="@string/button_text_registration"
                        android:id="@+id/button"
                        android:onClick="userReg" />
                </LinearLayout>
           </LinearLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/horizontal_LL.sm.1">
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
